# IAM-dynamic

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  Dockerfile.backend  Dockerfile.caddy  Dockerfile.frontend  GEMINI.md  README-NEW.md  README.md  config.py  docker-compose.prod.yml  docker-compose.yml  llm_service.py  requirements.txt  setup-auth.sh  setup-aws.sh  setup.sh  start-dev.sh
.claude/: settings.local.json
.github/workflows/: ci.yml  deploy.yml
backend/: config.py  llm_service.py  main.py  package-lock.json  pyproject.toml  requirements.txt  ruff.toml  schemas.py
backend/scripts/: hash_password.py
backend/services/: auth_service.py  error_handler.py  slack_service.py  sts_service.py  turnstile_service.py
components/: notifications.py  sidebar.py  ui_components.py
docker/: Caddyfile  default.conf  healthcheck-backend.sh  healthcheck-frontend.sh  nginx.conf
docs/: AWS-SETUP.md  GETTING-STARTED.md  antsle-deployment-guide.md  local-docker-testing.md  microk8s-argocd-deployment-guide.md  vps-setup-guide.md
frontend/: eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  global.d.ts  index.css  main.tsx
frontend/src/components/: auth-provider.tsx  sidebar.tsx  theme-provider.tsx
frontend/src/lib/: api.ts
frontend/src/types/: api.ts
frontend/src/views/: credentials-view.tsx  login-view.tsx  rejected-view.tsx  request-view.tsx  (+1 more)
services/: database.py  policy_validator.py  retry_handler.py
utils/: logging_config.py  theme.py  validators.py
(+4 files in other folders)
