[project]
name = "iam-dynamic-backend"
version = "1.0.0"
description = "IAM-Dynamic Backend - FastAPI with AI-driven IAM policy generation"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "python-dotenv>=1.0.0",
    "boto3>=1.34.0",
    "google-genai>=1.0.0",
    "openai>=1.5.0",
    "anthropic>=0.8.0",
    "zhipuai>=2.1.0",
    "httpx>=0.25.0",
    "python-multipart>=0.0.6",
    "cors>=1.0.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "httpx>=0.25.0",
    "ruff>=0.1.0",
]
